--- a/public/css/WeekSix/all.css
+++ b/public/css/WeekSix/all.css
@@ -8154,6 +8154,7 @@ main {
   .subscribeBtn {
     width: 7.5rem;
     padding: 0;
+    margin: 0;
     font-size: 1rem;
     line-height: 1.5rem; } }
 
@@ -8324,6 +8325,19 @@ footer {
     .navMenu .row {
       width: 500px; } }
 
+@media only screen and (max-width: 768px) {
+  .navLinksMenu a {
+    font-size: 1.5rem;
+    font-weight: 400;
+    color: #121212; }
+  .navLinksMenu .mainMenu > li {
+    border-bottom: 1px solid #00000062; }
+  .navLinksMenu .subMenu {
+    border-bottom: 1px solid #00000062; }
+    .navLinksMenu .subMenu a {
+      font-size: 1rem;
+      color: #0000009A; } }
+
 .testbor {
   border: 1px solid #000; }
 
@@ -8339,11 +8353,17 @@ footer {
 body {
   font-family: 'Roboto', Arial, Helvetica, sans-serif; }
 
+button,
+button:focus {
+  background-color: transparent;
+  border: none;
+  outline: none; }
+
 .btn {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
-  margin-left: 1rem !important;
-  margin-right: 1rem !important; }
+  margin-left: 0 !important;
+  margin-right: 0 !important; }
 
 a.green {
   color: #0E8A00; }
@@ -8351,3 +8371,11 @@ a.green {
 @media screen and (max-width: 768px) {
   .btn-fluid {
     width: 90%; } }
+
+.show {
+  transform: translateX(0%);
+  transition: transform .4s; }
+
+.hide {
+  transform: translateX(-100%);
+  transition: transform .4s; }
