--- a/source/scss/WeekSix/all.scss
+++ b/source/scss/WeekSix/all.scss
@@ -29,11 +29,18 @@ body {
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
+button,
+button:focus {
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
+
 .btn {
     margin-top: 0 !important;
     margin-bottom: 0 !important;
-    margin-left: 1rem !important;
-    margin-right: 1rem !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
 }
 
 a.green {
@@ -44,4 +51,14 @@ a.green {
     @media screen and (max-width: 768px) {
         width: 90%;
     }
+}
+
+.show {
+    transform: translateX(0%);
+    transition: transform .4s;
+}
+
+.hide {
+    transform: translateX(-100%);
+    transition: transform .4s;
 }
