Revised detail of souce code.

--- a/source/template/weekSix/index.html
+++ b/source/template/weekSix/index.html
@@ -1,10 +1,3 @@
-<!-- ---
-title: ANSWER 後台
-layout: ./app/layout.ejs
-engine: ejs
-current: index
---- -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,11 +8,10 @@ current: index
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <title>Document</title>
+    <title>第六週作業</title>
 </head>
 
 <body>
-
     <header>
         <div class="container">
             <nav class="navbar-header navbar-expand-lg navbar-light justify-content-between">
