--- a/source/scss/WeekSix/_base.scss
+++ b/source/scss/WeekSix/_base.scss
@@ -1,1 +1,50 @@
 $image-path:"../../src/images/week6/";
+body {
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+}
+
+header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+}
+
+button,
+button:focus {
+    background-color: transparent;
+    border: none;
+    outline: none;
+}
+
+.btn {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
+
+a.green {
+    color: #0E8A00;
+}
+
+.btn-fluid {
+    @media screen and (max-width: 768px) {
+        width: 90%;
+    }
+}
+
+.show {
+    transform: translateX(0%);
+    transition: transform .4s;
+}
+
+.hide {
+    transform: translateX(-100%);
+    transition: transform .4s;
+}
