Added links of week six and week seven

--- a/public/css/WeekSix/all.css
+++ b/public/css/WeekSix/all.css
@@ -8082,6 +8082,9 @@ a.text-green2:hover, a.text-green2:focus {
   .navbar-dark .navbar-nav .nav-link.disabled {
     color: rgba(255, 255, 255, 0.25); }
 
+.navbar-dark .navbar-nav .nav-link-dark {
+  color: #121212; }
+
 .navbar-dark .navbar-nav .show > .nav-link,
 .navbar-dark .navbar-nav .active > .nav-link,
 .navbar-dark .navbar-nav .nav-link.show,
