--- a/source/scss/WeekSix/_navbar.scss
+++ b/source/scss/WeekSix/_navbar.scss
@@ -327,6 +327,9 @@
                 color: $navbar-dark-disabled-color;
             }
         }
+        .nav-link-dark {
+            color: #121212;
+        }
         .show>.nav-link,
         .active>.nav-link,
         .nav-link.show,
